replaced PuzzleConfig by GobanConfig

--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -89,7 +89,7 @@
                 display: flex;
                 align-items: center;
                 text-decoration: none;
-                width: 23rem;
+                width: 25rem;  /* WB, changed from 23rem to 25rem */
                 height: 5rem;
                 color: #f9f9f9;
                 border-radius: 0.3rem;
