Add some buttons to help admin OJE tags

--- a/src/components/JosekiAdmin/JosekiAdmin.styl
+++ b/src/components/JosekiAdmin/JosekiAdmin.styl
@@ -14,7 +14,7 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-.audit-container {
+.admin-container {
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: auto;
@@ -92,6 +92,8 @@
         .user-admin {
             display: flex;
             flex-direction: column;
+
+            padding-left: 1rem;
         }
 
         .misc-admin {
@@ -101,6 +103,7 @@
             flex-grow: 1;
             margin-top: 5px;
             margin-right: 3px;
+            padding-left: 1rem;
         }
     }
 }
