--- a/src/views/Joseki/Joseki.styl
+++ b/src/views/Joseki/Joseki.styl
@@ -473,7 +473,7 @@
 
         .move-attributes {
             display: grid;
-            // grid-template-colums: 1fr 1fr;
+            // grid-template-columns: 1fr 1fr;
             grid-template-rows: auto;
             grid-row-gap: 1em;
             margin-top: 1em;
