Display fixed-ailr calculation results in good places.

--- a/src/views/AIDetection/AIDetection.styl
+++ b/src/views/AIDetection/AIDetection.styl
@@ -16,8 +16,11 @@
  */
 #AI-Detection {
     width: 90vw;
-
     margin: 0 auto;
+
+    td span {
+        margin-left: 0.25rem;
+    }
 
     h1 {
         display: flex;
