--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -1,4 +1,3 @@
-
 .reported-game-container {
     flex: 1;
     display: flex;
@@ -26,6 +25,19 @@
 
         .event {
             padding-right: 0.3rem;
+        }
+    }
+
+    .ai-like-rate {
+        display: flex;
+        flex-direction: row;
+        gap: 0.5rem;
+        margin-top: 0.5rem;
+
+        .player-rates {
+            display: flex;
+            flex-direction: column;
+            gap: 0.25rem;
         }
     }
 
