Show banned status (so we don't re-investigate banned AI users)

--- a/src/components/Player/Player.styl
+++ b/src/components/Player/Player.styl
@@ -34,6 +34,11 @@
         }
     }
 
+    &.suspended-player {
+        text-decoration: line-through !important;
+        font-style: italic;
+    }
+
     .flag {
         margin-right: 0.3rem;
         margin-left: 0.1rem;
