added multiple choice exercises

--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -89,7 +89,7 @@
                 display: flex;
                 align-items: center;
                 text-decoration: none;
-                width: 25rem;  /* WB, changed from 23rem to 25rem */
+                width: 23rem;
                 height: 5rem;
                 color: #f9f9f9;
                 border-radius: 0.3rem;
@@ -128,8 +128,18 @@
                     margin-right: 0.8rem;
                 }
 
-                h1, h2, h3 {
+                h1 {
                     margin: 0;
+                    font-size: 1.8rem;  
+                }
+
+                h2 {
+                    margin: 0;
+                }
+
+                h3 {
+                    margin: 0;
+                    font-size: 1rem;  
                 }
 
                 cursor: pointer;
