Added new calculation method.

--- a/src/views/Game/AIReview.styl
+++ b/src/views/Game/AIReview.styl
@@ -239,6 +239,31 @@
         }
     }
 
+    .categorization-toggler {
+        display: inline-flex;
+        width: 100%;
+        padding-top: 0.5rem;
+        padding-bottom: 0;
+
+        span {
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+        }
+
+        .old-toggle {
+            text-align: right;
+        }
+
+        .new-toggle {
+            text-align: left;
+        }
+
+        .old-toggle, .new-toggle {
+            cursor: pointer;
+            flex: 1;
+        }
+    }
+
     .become-a-site-supporter-line {
         display: block;
         width: 15rem;
