undebug and tidy up

--- a/src/views/Game/AIReview.styl
+++ b/src/views/Game/AIReview.styl
@@ -264,23 +264,13 @@
         width: 100%;
         padding-top: 0.5rem;
         padding-bottom: 0;
+        align-items: center;
+        justify-content: center;
 
-        span {
+        .toggle-label {
             padding-left: 0.5rem;
             padding-right: 0.5rem;
-        }
-
-        .old-toggle {
-            text-align: right;
-        }
-
-        .new-toggle {
-            text-align: left;
-        }
-
-        .old-toggle, .new-toggle {
-            cursor: pointer;
-            flex: 1;
+            cursor: default;
         }
     }
 
