Admin page stubs

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -522,6 +522,7 @@ nowrap()
 @require "global_styl/misc-ui.styl";
 @require "global_styl/ogs-font.styl";
 @require "../submodules/goban/src/Goban.styl";
+@require '../submodules/moderator-ui/*/*.styl';
 @require "global_styl/swal.styl";
 @require "global_styl/flags32.styl";
 @require "global_styl/font-awesome.styl";
