Tweak table layout

--- a/src/components/AIReview/AiSummaryTable.styl
+++ b/src/components/AIReview/AiSummaryTable.styl
@@ -8,13 +8,20 @@
             text-align: center;
         }
 
+        .spacer-column {
+            padding: 0;
+            border: none;
+            background: none;
+        }
+
         .move-count-container {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-end;
             position: relative;
 
             .move-list-button {
+                padding: 0;
                 background: none;
                 border: none;
                 color: #666;
@@ -112,4 +119,4 @@
             text-align: center;
         }
     }
-} 
+}
