Style updates for notify on decline

--- a/src/components/FriendList/FriendList.styl
+++ b/src/components/FriendList/FriendList.styl
@@ -15,7 +15,8 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 .FriendList {
-    .show-offline {
+    .show-offline,
+    .notify-on-decline {
         input, label {
             cursor: pointer;
         }
