--- a/src/components/Notifications/Notifications.styl
+++ b/src/components/Notifications/Notifications.styl
@@ -133,4 +133,17 @@ notification-list-height = 14rem;
         display: flex;
         flex-direction: column;
     }
+
+    .notify-on-decline {
+        cursor: pointer;
+        themed: color shade2;
+        font-size: 0.8rem;
+        margin-top: 0.5rem;
+        display: flex;
+        align-items: center;
+
+        label {
+            margin-left: 0.5rem;
+        }
+    }
 }
