Desaturate and theme up the account warning modals to not be quite so blinding

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -42,8 +42,10 @@
     max-height: calc(95vh - 2rem);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
     z-index: z.account-warning;
-    themed: background-color info;
-    themed: color colored-background-fg;
+    themed: background-color account-warning-bg;
+    themed: color account-warning-fg;
+    themed-lighten: border-color account-warning-bg 20%;
+    border: 1px solid;
     border-radius: 0.5rem;
     padding: 1rem;
     display: flex;
@@ -108,8 +110,10 @@
     max-height: calc(95vh - 2rem);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
     z-index: z.account-warning;
-    themed: background-color info;
-    themed: color colored-background-fg;
+    themed: background-color account-warning-bg;
+    themed: color account-warning-fg;
+    themed-lighten: border-color account-warning-bg 20%;
+    border: 1px solid;
     border-radius: 0.5rem;
     padding: 1rem;
     display: flex;
