--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -273,6 +273,8 @@ light.miniboard-stone-removal           = #FBfbD8
 light.miniboard-stone-removal-border    = darken(light.miniboard-stone-removal, 45%)
 light.miniboard-stone-removal-hover     = lighten(light.miniboard-stone-removal, 45%)
 light.miniboard-stone-removal-hover-border= darken(light.miniboard-stone-removal-hover, 45%)
+
+/** Misc **/
 light.player-black-background           = linear-gradient(to bottom, #7d7e7d 0%, #0e0e0e 100%);
 light.player-white-background           = linear-gradient(to bottom, #cccccc 0%, #eeeeee 30%, #ffffff 100%);
 light.inactive-support-gradient         = linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
@@ -284,6 +286,8 @@ light.player-white-clock                = light.player-white-fg
 light.player-black-paused-clock         = #ABA8AD;
 light.player-white-paused-clock         = #928A99;
 light.quickmatch-player-waiting         = darken(light.success, 10%)
+light.account-warning-bg                = #cab4d6
+light.account-warning-fg                = light.fg
 
 /************/
 /*** DARK ***/
@@ -416,6 +420,8 @@ dark.miniboard-stone-removal            = #5B4810
 dark.miniboard-stone-removal-border     = darken(dark.miniboard-stone-removal, 45%)
 dark.miniboard-stone-removal-hover      = darken(dark.miniboard-stone-removal, 45%)
 dark.miniboard-stone-removal-hover-border= darken(dark.miniboard-stone-removal-hover, 45%)
+
+/** Misc **/
 dark.player-black-background            = linear-gradient(to bottom, #7d7d7d 0%, #333333 50%, #0c0c0c 100%);
 dark.player-white-background            = linear-gradient(to bottom, #888888 0%, #efefef 50%, #efefef 100%);
 dark.inactive-support-gradient          = linear-gradient(to bottom, #7d7d7d 0%, #333333 100%);
@@ -426,9 +432,11 @@ dark.player-black-clock                 = lighten(dark.player-black-fg, 50%)
 dark.player-white-clock                 = #000
 dark.player-white-paused-clock          = #5F4A71;
 dark.player-black-paused-clock          = #928A99;
-
 dark.joseki-ideal                       = #DBAF00;
 dark.quickmatch-player-waiting          = dark.success
+dark.account-warning-bg                 = #2d2433
+dark.account-warning-fg                 = dark.fg
+
 
 /******************/
 /*** ACCESSIBLE ***/
