Distinguish stronger cheat detection reviews better

--- a/src/views/Game/AIReview.styl
+++ b/src/views/Game/AIReview.styl
@@ -348,6 +348,10 @@
     border-color: #888;
 }
 
+.ai-cheat-detection-review-plus {
+    themed: border-color professional;
+}
+
 .ai-review-list-container {
     border: 1px solid red;
 }
