--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -135,6 +135,7 @@
         display: flex;
         align-items: stretch;
         width: 100%;
+        min-height: 44px;
     }
 
     .player-icon-container {
