add system theme button

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -150,7 +150,7 @@ header.NavBar {
 
                 .theme-selectors {
                     display: flex;
-                    justify-content: space-around;
+                    justify-content: center;
                 }
 
                 .settings-and-logout {
@@ -616,7 +616,7 @@ header.NavBar {
 
         .theme-selectors {
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
         }
 
         .settings-and-logout {
@@ -780,33 +780,6 @@ button.theme-button {
     font-size: 1.2rem;
 }
 
-body.light header.NavBar button.theme-button.light {
-    background-color: light.primary;
-    border-color: darken(light.primary, 8%);
-
-    i.fa.fa-sun-o {
-        color: #fff;
-    }
-}
-
-body.dark header.NavBar button.theme-button.dark {
-    background-color: dark.primary;
-    border-color: darken(dark.primary, 8%);
-
-    i.fa.fa-moon-o {
-        color: #fff;
-    }
-}
-
-// do for accessible what we do for dark...
-body.accessible header.NavBar button.theme-button.accessible {
-    background-color: accessible.primary;
-    border-color: darken(accessible.primary, 8%);
-
-    i.fa.fa-eye {
-        color: #fff;
-    }
-}
 
 .BanIndicator {
     position: fixed;
