Update e2e to deal with various recent changes.

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -96,7 +96,8 @@
     }
 }
 
-.AccountWarningAck {
+.AccountWarningAck,
+.AccountWarningInfo {
     position: fixed;
     top: auto;
     bottom: auto;
