Show actual rank range in opponent rank selector

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -455,7 +455,7 @@
 
     .rank-title-group {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         gap: 1rem;
     }
 
@@ -463,18 +463,12 @@
         margin: 0;
         font-size: 1.2rem;
         line-height: 1;
-        padding-bottom: 8px;
-        /* Align with the dash */
     }
 
-    .rank-selector-label {
-        font-size: 1.2rem;
-        font-weight: 500;
-        margin-top: 0.5rem;
-    }
+
 
     .handicap-section {
-        margin-top: 1.7rem;
+        margin-top: 0.5rem;
     }
 
     .rank-separator {
