Add link to kids go server on learning hub

--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -37,6 +37,24 @@
         width: 64px;
         margin: 0.5rem;
     }
+
+    .kids-go-server {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2rem;
+        margin-top: 2rem;
+        img {
+            width: 8rem;
+            height: 8rem;
+            margin-right: 0.5rem;
+        }
+        a {
+            display: block;
+            font-size: 1.3rem;
+        }
+    }
 }
 
 #LearningHub-Index {
