Mask out announcements from smoke test screenshots

--- a/e2e-tests/smoke/profile_screenshot_mask.css
+++ b/e2e-tests/smoke/profile_screenshot_mask.css
@@ -15,3 +15,7 @@ section.right { /* NavBar changeable icons and user name */
 .activity-card > div:first-of-type{
   visibility: hidden !important;
 }
+
+.Announcements {
+  visibility: hidden !important;
+}
