We need the right top bar on the sign in page!

--- a/e2e-tests/smoke/basic_screenshot_mask.css
+++ b/e2e-tests/smoke/basic_screenshot_mask.css
@@ -10,6 +10,6 @@ section.right { /* NavBar changeable icons and user name */
   visibility: hidden !important;
 }
 
-.Announcements {
+.announcement {
   visibility: hidden !important;
 }
