Make ladder page more robust by masking player count.

--- a/e2e-tests/smoke/ladders_screenshot_mask.css
+++ b/e2e-tests/smoke/ladders_screenshot_mask.css
@@ -23,3 +23,7 @@ tr {
 .Announcements {
   visibility: hidden !important;
 }
+
+.LadderList .Card h4 {  /* Hide the player counts */
+  visibility: hidden !important;
+}
