Guard against players in ladders messing up the screen compare

--- a/e2e-tests/smoke/ladders_screenshot_mask.css
+++ b/e2e-tests/smoke/ladders_screenshot_mask.css
@@ -27,3 +27,7 @@ tr {
 .LadderList .Card h4 {  /* Hide the player counts */
   visibility: hidden !important;
 }
+
+.LadderComponent tbody { /* hide the player details */
+  visibility: hidden !important;
+}
