Mask LadderComponent, it's too variable

--- a/e2e-tests/smoke/ladders_screenshot_mask.css
+++ b/e2e-tests/smoke/ladders_screenshot_mask.css
@@ -28,6 +28,6 @@ tr {
   visibility: hidden !important;
 }
 
-.LadderComponent tbody { /* hide the player details */
+.LadderComponent { /* this table is too variable to test by screenshot*/
   visibility: hidden !important;
 }
