--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     height: calc(100vh - var(--below-navbar));
-    overflow: hidden;
+    overflow-y: auto;
 }
 
 @media (orientation: portrait) {
